[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
warp = { version = "0.4.2", features = ["server", "websocket"] }
